--- a/content/resources/ps01.md
+++ b/content/resources/ps01.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Problem set on financial cash flows from alternative perspectives and
   appraisals of an entertainment media loading project.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-484-project-appraisal-in-developing-countries-spring-2005/3f22cdf750c2973a8ae974cbdf05afa0_ps01.pdf
+file: /media/courses/11-484-project-appraisal-in-developing-countries-spring-2005/3f22cdf750c2973a8ae974cbdf05afa0_ps01.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 'Problem Set 1: Financial Cash Flows from Alternative Perspectives'
 uid: 3f22cdf7-50c2-973a-8ae9-74cbdf05afa0
