--- a/content/resources/ps02.md
+++ b/content/resources/ps02.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Problem set on discounting and alternative investment criteria.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-484-project-appraisal-in-developing-countries-spring-2005/91cc8a9261884aed8c56cdfcd02b18d5_ps02.pdf
+file: /media/courses/11-484-project-appraisal-in-developing-countries-spring-2005/91cc8a9261884aed8c56cdfcd02b18d5_ps02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: 'Problem Set 2: Discounting and Alternative Investment Criteria'
 uid: 91cc8a92-6188-4aed-8c56-cdfcd02b18d5
