Sync all content

--- a/content/resources/ps01.md
+++ b/content/resources/ps01.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 8fe830f1-085c-9120-2b3a-dafe505a216b
 resourcetype: Document
 title: 'Problem Set 1: Financial Cash Flows from Alternative Perspectives'
 uid: 3f22cdf7-50c2-973a-8ae9-74cbdf05afa0
