--- a/content/resources/ps02.md
+++ b/content/resources/ps02.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 8fe830f1-085c-9120-2b3a-dafe505a216b
 resourcetype: Document
 title: 'Problem Set 2: Discounting and Alternative Investment Criteria'
 uid: 91cc8a92-6188-4aed-8c56-cdfcd02b18d5
