--- a/content/resources/ps03.md
+++ b/content/resources/ps03.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 8fe830f1-085c-9120-2b3a-dafe505a216b
 resourcetype: Document
 title: 'Problem Set 3: Scale and Timing'
 uid: 38bd3eb0-7754-81b7-dc24-6a907dc588f2
