--- a/content/resources/ps05.md
+++ b/content/resources/ps05.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 8fe830f1-085c-9120-2b3a-dafe505a216b
 resourcetype: Document
 title: 'Problem Set 5: Economic Appraisal of Nontradeable Projects'
 uid: c0032fa7-5077-5a63-967b-f0d8fd2f034d
