--- a/content/resources/11-484s05-th.md
+++ b/content/resources/11-484s05-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A road and infrastructure project being implemented in Ho Chi Minh City,
   Vietnam 2001. (Image by Professor Annette M. Kim.)
-file: /media/courses/11-484-project-appraisal-in-developing-countries-spring-2005/393ec72310f7bc02114759f4773fe1b7_11-484s05-th.jpg
+file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/393ec72310f7bc02114759f4773fe1b7_11-484s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A road and infrastructure project being implemented in Ho Chi Minh City,
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Road and Infrastructure Project (thumbnail)
 uid: 393ec723-10f7-bc02-1147-59f4773fe1b7
 ---
+A road and infrastructure project being implemented in Ho Chi Minh City, Vietnam 2001. (Image by Professor Annette M. Kim.)
+
