--- a/content/resources/ps03.md
+++ b/content/resources/ps03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Problem set on scale and timing.
-file: /media/courses/11-484-project-appraisal-in-developing-countries-spring-2005/38bd3eb0775481b7dc246a907dc588f2_ps03.pdf
+file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/38bd3eb0775481b7dc246a907dc588f2_ps03.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: 'Problem Set 3: Scale and Timing'
 uid: 38bd3eb0-7754-81b7-dc24-6a907dc588f2
 ---
+Problem set on scale and timing.
+
