--- a/content/resources/ps05.md
+++ b/content/resources/ps05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Problem set on economic appraisal of nontradeable projects.
-file: /media/courses/11-484-project-appraisal-in-developing-countries-spring-2005/c0032fa750775a63967bf0d8fd2f034d_ps05.pdf
+file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/c0032fa750775a63967bf0d8fd2f034d_ps05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: 'Problem Set 5: Economic Appraisal of Nontradeable Projects'
 uid: c0032fa7-5077-5a63-967b-f0d8fd2f034d
 ---
+Problem set on economic appraisal of nontradeable projects.
+
