Sync all content

--- a/content/resources/ps02.md
+++ b/content/resources/ps02.md
@@ -5,6 +5,7 @@ file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/91cc
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: 'Problem Set 2: Discounting and Alternative Investment Criteria'
 uid: 91cc8a92-6188-4aed-8c56-cdfcd02b18d5
 ---
 Problem set on discounting and alternative investment criteria.
-
