--- a/content/resources/ps03.md
+++ b/content/resources/ps03.md
@@ -5,6 +5,7 @@ file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/38bd
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: 'Problem Set 3: Scale and Timing'
 uid: 38bd3eb0-7754-81b7-dc24-6a907dc588f2
 ---
 Problem set on scale and timing.
-
