--- a/content/resources/ps05.md
+++ b/content/resources/ps05.md
@@ -5,6 +5,7 @@ file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/c003
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: 'Problem Set 5: Economic Appraisal of Nontradeable Projects'
 uid: c0032fa7-5077-5a63-967b-f0d8fd2f034d
 ---
 Problem set on economic appraisal of nontradeable projects.
-
