--- a/content/resources/11-484s05-th.md
+++ b/content/resources/11-484s05-th.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: A photograph of a new road being constructed in Vietnam.  The photograph
     shows a recently graded dirt surface as well as curbs and and a drainage system.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Road and Infrastructure Project (thumbnail)
 uid: 393ec723-10f7-bc02-1147-59f4773fe1b7
 ---
 A road and infrastructure project being implemented in Ho Chi Minh City, Vietnam 2001. (Image by Professor Annette M. Kim.)
-
