--- a/content/resources/11-484s05.md
+++ b/content/resources/11-484s05.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: A photograph of a new road being constructed in Vietnam.  The photograph
     shows a recently graded dirt surface as well as curbs and and a drainage system.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Road and Infrastructure Project
 uid: b7332c8f-c6f6-5742-74a0-7420451969ac
 ---
 A road and infrastructure project being implemented in Ho Chi Minh City, Vietnam 2001. (Image by Professor Annette M. Kim.)
-
