--- a/content/resources/ps01.md
+++ b/content/resources/ps01.md
@@ -6,6 +6,7 @@ file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/3f22
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: 'Problem Set 1: Financial Cash Flows from Alternative Perspectives'
 uid: 3f22cdf7-50c2-973a-8ae9-74cbdf05afa0
 ---
 Problem set on financial cash flows from alternative perspectives and appraisals of an entertainment media loading project.
-
