Sync all content

--- a/content/resources/11-484s05.md
+++ b/content/resources/11-484s05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: A road and infrastructure project being implemented in Ho Chi Minh City,
   Vietnam 2001. (Image by Professor Annette M. Kim.)
 file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/b7332c8fc6f6574274a07420451969ac_11-484s05.jpg
+file_size: 126978
 file_type: image/jpeg
 image_metadata:
   caption: A road and infrastructure project being implemented in Ho Chi Minh City,
