--- a/content/resources/ps03.md
+++ b/content/resources/ps03.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Problem set on scale and timing.
 file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/38bd3eb0775481b7dc246a907dc588f2_ps03.pdf
+file_size: 26690
 file_type: application/pdf
 learning_resource_types:
 - Assignments
