--- a/content/resources/ps05.md
+++ b/content/resources/ps05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Problem set on economic appraisal of nontradeable projects.
 file: /courses/11-484-project-appraisal-in-developing-countries-spring-2005/c0032fa750775a63967bf0d8fd2f034d_ps05.pdf
+file_size: 40790
 file_type: application/pdf
 learning_resource_types:
 - Assignments
